--- a/Multi-TCG-Deckbuilder/Multi-TCG-Deckbuilder.csproj
+++ b/Multi-TCG-Deckbuilder/Multi-TCG-Deckbuilder.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IGamePlugInBase\IGamePlugInBase.csproj" />
+  </ItemGroup>
+
 </Project>
