--- a/Multi-TCG-Deckbuilder/Multi-TCG-Deckbuilder.csproj
+++ b/Multi-TCG-Deckbuilder/Multi-TCG-Deckbuilder.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Octokit" Version="2.0.1" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.116" />
   </ItemGroup>
 
   <ItemGroup>
