--- a/Multi-TCG-Deckbuilder/Multi-TCG-Deckbuilder.csproj
+++ b/Multi-TCG-Deckbuilder/Multi-TCG-Deckbuilder.csproj
@@ -12,7 +12,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Icon_Error.png" />
+    <None Remove="Resources\NotFoundImage.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="deckbuilder_icon_lKN_icon.ico" />
+    <Resource Include="Resources\Icon_Error.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\NotFoundImage.jpg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
@@ -25,11 +36,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
