Handle Corrupted Image

--- a/Multi-TCG-Deckbuilder/App.config
+++ b/Multi-TCG-Deckbuilder/App.config
@@ -13,6 +13,9 @@
             <setting name="HideWarningDialogs" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="AutoDeleteCorrupted" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Multi_TCG_Deckbuilder.Properties.Settings>
     </userSettings>
 </configuration>
