--- a/Multi-TCG-Deckbuilder/Properties/Settings.settings
+++ b/Multi-TCG-Deckbuilder/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="HideWarningDialogs" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="AutoDeleteCorrupted" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
